force-app/main/default/objects/Resource_Service_Alignment__c/Resource_Service_Alignment__c.object-meta.xml
<CustomObject>
    <label>Resource/Service Alignment</label>
    <nameField>
        <label>Resource/Service Alignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource/Service Alignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>