force-app/main/default/objects/Resource_Service_Alignment__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Resource/Service Alignments</relationshipLabel>
    <relationshipName>Resource_Service_Alignments</relationshipName>
    <type>Lookup</type>
</CustomField>