force-app/main/default/objects/Resource_Service_Alignment__c/fields/Resource_Staff__c.field-meta.xml
<CustomField>
    <fullName>Resource_Staff__c</fullName>
    <label>Resource/Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Resource_Business_Alignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>