force-app/main/default/objects/Resource_Service_Alignment__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipName>Service</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>